<resources>
    <string name="app_name">Traffic Law</string>

    <string name="loginscreen">Log In</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="report_feedback">Report/Feedback</string>
    <string name="ticket_status">Ticket Status</string>
    <string name="welcome_mr">Welcome Mr.</string>
    <string name="pay_ticket">Pay Ticket</string>
    <string name="view_tickets">View Tickets</string>
    <string name="my_profile">My Profile</string>
    <string name="contact_us">Contact us</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proofimage">ProofImage</string>
    <string name="pay">Pay</string>
    <string name="loginimage">LoginImage</string>
    <string name="username_or_email">Phone or Email</string>
    <string name="violation_type">Violation Type:</string>


</resources>
