<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".Dashboard"

    android:id="@+id/relativeLayout2">

    <View
        android:id="@+id/view6"
        android:layout_width="130dp"
        android:layout_height="134dp"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/buttondesign"

        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true" />

    <View
        android:id="@+id/view7"
        android:layout_width="130dp"
        android:layout_height="134dp"
        android:layout_marginStart="211dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/buttondesign"

        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true" />

    <View
        android:id="@+id/view4"
        android:layout_width="130dp"
        android:layout_height="134dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="171dp"
        android:background="@drawable/buttondesign"

        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true" />

    <View
        android:id="@+id/view5"
        android:layout_width="130dp"
        android:layout_height="134dp"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="171dp"
        android:background="@drawable/buttondesign"

        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true" />

    <View
        android:id="@+id/view3"
        android:layout_width="130dp"
        android:layout_height="134dp"
        android:layout_marginStart="213dp"
        android:layout_marginBottom="315dp"
        android:background="@drawable/buttondesign"

        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true" />

    <TextView
        android:id="@+id/payticket2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="65dp"
        android:clickable="true"
        android:drawableTop="@drawable/punishment"
        android:drawablePadding="-10dp"
        android:gravity="center"
        android:text="@string/ticket_status"
        android:textColor="@color/whitecolor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_mr"

        android:textColor="@color/whitecolor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/View1"
        android:layout_width="130dp"
        android:layout_height="134dp"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="315dp"
        android:background="@drawable/buttondesign"

        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true" />

    <TextView
        android:id="@+id/payticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="75dp"
        android:clickable="true"
        android:drawableTop="@drawable/global"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/pay_ticket"
        android:textColor="@color/whitecolor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginBottom="183dp"
        android:drawableTop="@drawable/trafficpolice"
        android:gravity="center"
        android:text="@string/view_tickets"
        android:textColor="@color/whitecolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="3dp"
        android:drawableTop="@drawable/user"
        android:text="@string/my_profile"
        android:gravity="center"
        android:textColor="@color/whitecolor"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginBottom="44dp"
        android:drawableTop="@drawable/writing"
        android:gravity="center"
        android:text="@string/report_feedback"

        android:textColor="@color/whitecolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="1dp"
        android:drawableTop="@drawable/email"
        android:gravity="center"
        android:text="@string/contact_us"


        android:textColor="@color/whitecolor"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>